fix: icon animations on mobile

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -227,4 +227,12 @@
   .nav-list {
     display: none;
   }
+
+  .icon:hover {
+    animation: none;
+  }
+
+  .icon-heart:hover {
+    animation: none;
+  }
 }
